--- a/app/src/main/res/layout/fragment_my_prohile.xml
+++ b/app/src/main/res/layout/fragment_my_prohile.xml
@@ -3,9 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="center">
+    >
 
     <TextView
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="내 프로필을 보여줍니다"/>
