--- a/app/src/main/res/layout/fragment_pizza_store_list.xml
+++ b/app/src/main/res/layout/fragment_pizza_store_list.xml
@@ -6,6 +6,7 @@
     android:gravity="center">
 
     <TextView
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="피자가게 목록을 보여줍니다"/>
